--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:gravity="center"
     android:padding="24dp"
-    tools:context=".HomeActivity">
+    tools:context=".home.HomeActivity">
 
     <TextView
         android:layout_width="wrap_content"
